src/controller/extractor/snapshots/loco_rs__controller__extractor__auth__tests__extract_from_multiple_locations.snap
---
source: src/controller/extractor/auth.rs
expression: "extract_token(&jwt_config, &parts)"
---
Ok(
    Some(
        "query_token_value",
    ),
)
